--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "laravel/pint": "^1.15"
+        "laravel/pint": "^1.15",
+        "phpunit/phpunit": "^10"
     }
 }
